@@ -1,161 +1,90 @@
-📊 Trading Journal Application
-A comprehensive Java desktop app for traders to track, analyze, and visualize their trading performance.
-⚙️ Setup & Installation
-📋 Requirements
-* Java JDK 17 or later
-* JavaFX 17.0.9 or compatible version
-🚀 Setup Instructions
-* Clone or Download the Repositorygit clone https://github.com/yourusername/trading-journal.gitDownload JavaFX SDK
-Get it from: https://gluonhq.com/products/javafx/Extract to: C:\javafx-sdk-17.0.9 (or your preferred location)
-🖥️ Project Setup in NetBeansOpen NetBeansFile → Open Project → Select your project folderRight-click the project → PropertiesNavigate to:
- Libraries → Add JAR/Folder → Add all JARs from lib folder of JavaFX SDKUnder Run → VM Options, add:--add-modules javafx.controls,javafx.base,javafx.graphics,javafx.fxml🔨 Build & Run
-* Build Project: F11
-* Run Project: F6
-🌟 Features & Functionality
-🧾 Multi-Account Management
-* Manage multiple trading accounts
-* Switch seamlessly between accounts
-* Each account stores data independently
-📈 Trade Logging
-* Log:
-   * Symbol, Entry/Exit Price, Size, Side (LONG/SHORT)
-   * Date, Duration, Returns, Balance
-   * Setup Strategy, Entry Type
-* Attach screenshots and notes to trades
-📊 Performance Analysis
-* Dashboard Metrics:
-   * Win/Loss Ratio
-   * Total P&L
-   * Average Win/Loss
-   * Performance by Setup Type
-   * Best/Worst Trades
-* Interactive Charts:
-   * Profit/Loss over time
-   * Daily/Weekly/Monthly Trends
-📅 Calendar View
-* Color-coded monthly performance
-* Hover or click to view daily trades
-* Daily trade count & P&L summaries
-📓 Trade Journal
-* Add rich notes per trade
-* Upload screenshots/charts
-* Strategy documentation
-⚙️ Setup & Entry Type Management
-* Customize and manage trade setups
-* Note entry strategies with images
-* Analyze setups by performance
-🔄 Import & Export
-* CSV Import/Export
-* Backup and Restore functionality
-🎨 Modern UI
-* Dark-themed, responsive design
-* Searchable, filterable tables
-🔐 Data Storage & Privacy
-* Local storage only: TradingJournalData directory
-* No cloud sync, complete privacy
-⌨️ Keyboard Shortcuts
-Action Shortcut Add Trade Ctrl + N Open Dashboard Ctrl + D Calendar View Ctrl + C Switch Account Ctrl + Tab
-📌 Additional Features
-* Set custom starting balance & risk parameters
-* Write and follow personal trading rules
-* Symbol management for faster entry
-📬 Support & Contact
-For support, suggestions, or feature requests: 📧 furkanozturk5406@hotmail.com
-The app is under active development. More features and visuals are coming soon — follow the repository to stay updated!you know about the project Syntax Analyzer. Can you make a similar to above README content for the project. Use symbols and make it visually appealing a READMEEditCrafted visually engaging README with comprehensive project details1sI'll create a visually appealing README file for the Syntax Analyzer project, similar to the Trading Journal example provided. I'll use symbols, emoji, and clear formatting to make it engaging and informative.
-The README should cover:
 
-Introduction to the Syntax Analyzer project
-Setup & Installation
-Project features and functionality
-How to use the analyzer
-Technical details
-Support information
-
-I'll structure it with headings, emojis, code blocks, and appropriate formatting.Syntax Analyzer READMEDocument # 🔍 Tokenized Syntax Analyzer
+# 🔍 Tokenized Syntax Analyzer
 
 A **robust Java-based compiler front-end** that implements a **character-by-character tokenizer** and **syntax validator** for a simplified Java-like language.
 
 ## 🚀 Project Overview
 
-The Syntax Analyzer processes souRetryClaude can make mistakes. Please double-check responses.Tip: Long chats cause you to reach your usage limits faster.Start a new chat  3.7 SonnetPublishCopy🔍 Tokenized Syntax Analyzer
-A robust Java-based compiler front-end that implements a character-by-character tokenizer and syntax validator for a simplified Java-like language.
-🚀 Project Overview
-The Syntax Analyzer processes source code files to identify tokens and verify syntactic correctness according to predefined grammar rules using a state machine implementation.
-⚙️ Setup & Installation
-📋 Requirements
+The Syntax Analyzer processes source code files to **identify tokens** and **verify syntactic correctness** according to predefined grammar rules using a **state machine** implementation.
 
-Java JDK 11 or later
-NetBeans IDE (recommended) or any Java IDE
+## ⚙️ Setup & Installation
 
-🔧 Setup Instructions
+### 📋 Requirements
 
-Clone or Download the Repository
+* **Java JDK 11** or later
+* **NetBeans IDE** (recommended) or any Java IDE
 
+### 🔧 Setup Instructions
+
+* **Clone or Download the Repository**
 git clone https://github.com/yourusername/syntax-analyzer.git
-👨‍💻 Project Setup in NetBeans
 
-Open NetBeans
-File → Open Project → Select your project folder
-Navigate to the source folder: src/syntaxanalyzer
 
-🏗️ Build & Run
+### 👨‍💻 Project Setup in NetBeans
 
-Build Project: F11
-Run with Arguments:
+* **Open NetBeans**
+* `File → Open Project → Select your project folder`
+* Navigate to the source folder: `src/syntaxanalyzer`
+
+### 🏗️ Build & Run
+
+* **Build Project**: `F11`
+* **Run with Arguments**: 
 
 Right-click project → Properties → Run → Arguments → Add "input.txt output.txt"
 
-Execute: F6
+* **Execute**: `F6`
 
-🎯 Features & Functionality
-📝 Grammar Support
+## 🎯 Features & Functionality
 
-Variable Declarations: int x; or char c;
-Assignment Statements: x = 5 + 3;
-If Statements: if (x > 5) { ... }
-While Loops: while (x != 0) { ... }
-Return Statements: return x;
+### 📝 Grammar Support
 
-🧩 Tokenization Engine
+* **Variable Declarations**: `int x;` or `char c;`
+* **Assignment Statements**: `x = 5 + 3;`
+* **If Statements**: `if (x > 5) { ... }`
+* **While Loops**: `while (x != 0) { ... }`
+* **Return Statements**: `return x;`
 
-Character-by-character Processing
-Token types:
+### 🧩 Tokenization Engine
 
-Keywords (int, char, if, while, return)
-Identifiers (single lowercase letters)
-Numbers (integer constants)
-Operators (+, -, *, /, =, ==, !=, >, <, >=, <=)
-Punctuation symbols (;, (, ), {, })
+* **Character-by-character Processing**
+* Token types:
+  * Keywords (int, char, if, while, return)
+  * Identifiers (single lowercase letters)
+  * Numbers (integer constants)
+  * Operators (+, -, *, /, =, ==, !=, >, <, >=, <=)
+  * Punctuation symbols (;, (, ), {, })
 
+### 🔍 Syntax Validation
 
+* **Statement Structure Analysis**
+* **Block Structure Tracking**
+* **Variable Declaration Checking**
+* **Expression Validation**
+* **Comprehensive Error Reporting**
 
-🔍 Syntax Validation
+### 📊 State Machine Implementation
 
-Statement Structure Analysis
-Block Structure Tracking
-Variable Declaration Checking
-Expression Validation
-Comprehensive Error Reporting
+* **Finite State Automaton** approach
+* States represent different processing conditions
+* Transitions occur based on input characters
+* Final states indicate successful token recognition
 
-📊 State Machine Implementation
+## 🛠️ Core Components
 
-Finite State Automaton approach
-States represent different processing conditions
-Transitions occur based on input characters
-Final states indicate successful token recognition
+### 📚 Class Structure
 
-🛠️ Core Components
-📚 Class Structure
+* **SyntaxAnalyzer**: Main orchestrator of the analysis process
+* **Tokenizer**: Implements the state machine for lexical analysis
+* **StatementAnalyzer**: Validates different statement types
+* **BlockAnalyzer**: Tracks and validates block structures
+* **SyntaxRules**: Contains grammar definitions
 
-SyntaxAnalyzer: Main orchestrator of the analysis process
-Tokenizer: Implements the state machine for lexical analysis
-StatementAnalyzer: Validates different statement types
-BlockAnalyzer: Tracks and validates block structures
-SyntaxRules: Contains grammar definitions
+## 📋 Sample Usage
 
-📋 Sample Usage
-Input File (input.txt)
-javaint x;
+### Input File (input.txt)
+```java
+int x;
 x = 5 + 3;
 if (x > 2) {
     x = x - 1;
@@ -164,42 +93,47 @@ while (x != 0) {
     x = x - 1;
 }
 return x;
-Output File (output.txt)
+```
+
+### Output File (output.txt)
+```
 Statement 1: Valid Variable Declaration
 Statement 2: Valid Assignment Statement
 Statement 3: Valid If Statement
 Statement 4: Valid While Loop
 Statement 5: Valid Return Statement
-🌟 Key Features
+```
 
-No External Dependencies: Pure Java implementation
-Detailed Error Reporting: Precise error location and message
-Multi-line Statement Support: Handles statements across multiple lines
-Proper Block Structure Analysis: Tracks nested blocks correctly
-Character-by-character Processing: True tokenized implementation
+## 🌟 Key Features
 
-🧠 Educational Value
+* **No External Dependencies**: Pure Java implementation
+* **Detailed Error Reporting**: Precise error location and message
+* **Multi-line Statement Support**: Handles statements across multiple lines
+* **Proper Block Structure Analysis**: Tracks nested blocks correctly
+* **Character-by-character Processing**: True tokenized implementation
 
-Demonstrates compiler front-end concepts:
+## 🧠 Educational Value
 
-Lexical Analysis (scanning)
-Syntax Analysis (parsing)
-State Machine Design
-Error Detection & Recovery
+* Demonstrates compiler front-end concepts:
+  * **Lexical Analysis** (scanning)
+  * **Syntax Analysis** (parsing)
+  * **State Machine Design**
+  * **Error Detection & Recovery**
+  
+## 🚦 Usage Instructions
 
-
-
-🚦 Usage Instructions
-
-Create a text file with Java-like code following the grammar rules
-Run the analyzer with input and output file paths:
-
+1. Create a text file with Java-like code following the grammar rules
+2. Run the analyzer with input and output file paths:
+```
 java syntaxanalyzer.SyntaxAnalyzer input.txt output.txt
+```
+3. Review the syntax analysis results in the output file
 
-Review the syntax analysis results in the output file
+## 📬 Support & Contact
 
-📬 Support & Contact
 For support, questions, or collaboration:
-📧 furkanozturk5406@hotmail.com
+📧 **furkanozturk5406@hotmail.com**
 
-The syntax analyzer demonstrates fundamental compiler construction concepts, focusing on the front-end components of lexical analysis and syntax validation.
+---
+
+**The syntax analyzer demonstrates fundamental compiler construction concepts, focusing on the front-end components of lexical analysis and syntax validation.**
